force-app/main/default/objects/DNE_Commission_Hierarchy__c/DNE_Commission_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>DNE Commission Hierarchy</label>
    <nameField>
        <displayFormat>COMM_HIER-{000000}</displayFormat>
        <label>DNE Commission Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DNE Commission Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>