force-app/main/default/objects/DNE_Commission_Hierarchy__c/fields/Level_10__c.field-meta.xml
<CustomField>
    <fullName>Level_10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 10</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DNE Commission Hierarchies (Level 10)</relationshipLabel>
    <relationshipName>DNE_Commission_Hierarchies_Level_10</relationshipName>
    <type>Lookup</type>
</CustomField>