force-app/main/default/objects/DNE_Commission_Hierarchy__c/fields/Level_11__c.field-meta.xml
<CustomField>
    <fullName>Level_11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 11</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DNE Commission Hierarchies (Level 11)</relationshipLabel>
    <relationshipName>DNE_Commission_Hierarchies_Level_11</relationshipName>
    <type>Lookup</type>
</CustomField>