force-app/main/default/objects/DNE_Commission_Hierarchy__c/fields/Level_12__c.field-meta.xml
<CustomField>
    <fullName>Level_12__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 12</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DNE Commission Hierarchies (Level 12)</relationshipLabel>
    <relationshipName>DNE_Commission_Hierarchies_Level_12</relationshipName>
    <type>Lookup</type>
</CustomField>