force-app/main/default/objects/DNE_Commission_Hierarchy__c/fields/Opener__c.field-meta.xml
<CustomField>
    <fullName>Opener__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opener</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DNE Commission Hierarchies (Opener)</relationshipLabel>
    <relationshipName>DNE_Commission_Hierarchies_as_Opener</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>