force-app/main/default/objects/DNE_Commission_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opener__c</columns>
    <columns>Type__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Level_1__c</columns>
    <columns>Level_2__c</columns>
    <columns>Level_3__c</columns>
    <columns>Level_4__c</columns>
    <columns>Level_5__c</columns>
    <columns>Level_6__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>